# snowbridge

./: .dockerignore  .envrc-example  .gitignore  .gitmodules  .vercelignore  CLAUDE.md  README.md  SECURITY.md  _typos.toml  codecov.yml  flake.nix  generate.go_v1  go.work  go.work.sum  init.sh  pet-preimage-verification.md  polkadot-sdk~main  rust-toolchain-nightly.toml  rust-toolchain.toml  shell.nix
control/: .gitignore  Cargo.toml  README.md  code.rs  config.toml  initial-checkpoint-sepolia.json  launch-config.toml  update-runtimes.sh
control/chopsticks/: Cargo.toml  polkadot-bridge-hub.yml  polkadot.yml
control/chopsticks-config/: polkadot-asset-hub.yml  polkadot-bridge-hub.yml  polkadot.yml
control/chopsticks/src/: lib.rs
control/data/sepolia/: initial-checkpoint.json
control/preimage/: Cargo.toml  build.rs
control/preimage-kusama/: Cargo.toml
control/preimage-kusama/src/: asset_hub_runtime.rs  bridge_hub_runtime.rs  commands.rs  constants.rs  helpers.rs  main.rs  relay_runtime.rs  xcm_helper.rs
control/preimage-kusama/templates/: chopsticks-execute-upgrade.js.hbs
control/preimage/src/: asset_hub_runtime.rs  bridge_hub_runtime.rs  chopsticks.rs  commands.rs  constants.rs  fees.rs  helpers.rs  main.rs  relay_runtime.rs  treasury_commands.rs
control/preimage/templates/: assethub.js  chopsticks-execute-upgrade.js.hbs  chopsticks-execute-upgrade.js.template
control/runtimes/asset-hub-kusama/: Cargo.toml  build.rs
control/runtimes/asset-hub-paseo/: Cargo.toml
control/runtimes/asset-hub-polkadot/: Cargo.toml
control/runtimes/asset-hub-rococo/: Cargo.toml
control/runtimes/asset-hub-westend/: Cargo.toml
control/runtimes/bridge-hub-kusama/: Cargo.toml
control/runtimes/bridge-hub-paseo/: Cargo.toml
control/runtimes/bridge-hub-polkadot/: Cargo.toml
control/runtimes/bridge-hub-rococo/: Cargo.toml
control/runtimes/bridge-hub-westend/: Cargo.toml
control/runtimes/kusama/: Cargo.toml
control/runtimes/paseo/: Cargo.toml
control/runtimes/penpal-westend/: Cargo.toml  build.rs
control/runtimes/polkadot/: Cargo.toml
control/runtimes/rococo/: Cargo.toml  build.rs
control/runtimes/westend/: Cargo.toml
control/src/: commands.rs  governance.rs  helpers.rs  main.rs  runtime.rs
gas-estimator/: .gitignore  Cargo.toml  README.md  make-bindings.sh
gas-estimator/runtimes/asset-hub-paseo/: Cargo.toml
gas-estimator/runtimes/asset-hub-polkadot/: Cargo.toml
gas-estimator/runtimes/asset-hub-westend/: Cargo.toml  build.rs
gas-estimator/runtimes/asset-hub-westend-local/: Cargo.toml
gas-estimator/runtimes/bridge-hub-paseo/: Cargo.toml
gas-estimator/runtimes/bridge-hub-polkadot/: Cargo.toml  build.rs
gas-estimator/runtimes/bridge-hub-westend/: Cargo.toml
gas-estimator/runtimes/bridge-hub-westend-local/: Cargo.toml  build.rs
gas-estimator/runtimes/paseo/: Cargo.toml
gas-estimator/runtimes/penpal-westend/: Cargo.toml
gas-estimator/runtimes/penpal-westend-local/: Cargo.toml
gas-estimator/runtimes/polkadot/: Cargo.toml
gas-estimator/runtimes/westend/: Cargo.toml  build.rs
gas-estimator/runtimes/westend-local/: Cargo.toml
gas-estimator/src/: config.rs  estimator.rs  lib.rs  main.rs  penpal.rs  runtimes.rs  xcm_builder.rs
gas-estimator/src/contracts/: i_gateway_v2.rs  mod.rs
parachain/: .gitignore  Cargo.toml  README.md  config-dup.json  config-xcmp.json  config.json  docker-compose.yml  module-weight-template.hbs  rust-toolchain  rust-toolchain.toml  rustfmt.toml  weights.rs
parachain/chain-specs/: rococo.json  staging.json
parachain/common/: Cargo.toml
parachain/common/src/: lib.rs  registry.rs  types.rs
parachain/doc/: index.html
parachain/ethereum/eth-signature/: Cargo.toml
parachain/node/: Cargo.toml
parachain/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
parachain/pallets/asset/: Cargo.toml
parachain/pallets/asset-registry/: Cargo.toml
parachain/pallets/assets/: Cargo.toml
parachain/pallets/basic-channel/: Cargo.toml
parachain/pallets/bridge/: Cargo.toml
parachain/pallets/broker/: Cargo.toml
parachain/runtime/: Cargo.toml
parachain/runtime-tests/: Cargo.toml
parachain/scripts/: benchmark.sh  docker_run.sh  make-docs.sh  make-snowbridge-image.sh  verify-pallets-build.sh
parachain/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
parachain/templates/: beacon_benchmarking_data.rs.mustache  benchmarking-fixtures.mustache  inbound-fixtures.mustache  module-weight-template.hbs  register_asset.mustache  register_token.mustache  runtime-weight-template.hbs  send_token.mustache
smoketest/: .envrc-westend  .envrc.example  .gitignore  Cargo.toml  README.md  make-bindings.sh  polkadot_relaychain_metadata.scale  run-legacy-v1-tests.sh  run-legacy-v1.sh  run-tests.sh  run-v1-tests.sh  run-v2-tests.sh  westend_relaychain_metadata.scale
smoketest/src/: asset_hub_helper.rs  constants.rs  helper.rs  helper_alloy.rs  helper_v2.rs  lib.rs  main.rs  penpal_helper.rs  types.rs  xcm.rs
smoketest/tests/: bridge_transfer_token.rs  configure_base_fee.rs  configure_operation_fees.rs  create_agent.rs  create_channel.rs  create_token.rs  do_something_as_arbitrary_transact.rs  do_something_through_signed.rs  do_something_through_sovereign.rs  estimate_fee.rs  fetch_contract_info.rs  forward_xcm.rs  generate_transactions.rs  lock_tokens.rs  malicious_payload.rs  register_polkadot_token.rs  register_polkadot_token_v2.rs  register_token.rs  register_token_as_arbitrary_transact.rs  register_token_v2.rs  send_native_eth.rs  send_polkadot_token.rs  send_token.rs  send_token_to_penpal.rs  send_token_to_penpal_v2.rs  send_token_v2.rs  send_tokens.rs  set_pricing_params.rs  set_token_transfer_fees.rs  transact_e2p.rs  transact_from_eth_to_penpal.rs  transact_from_penpal_to_ethereum.rs  transact_polkadot_to_ethereum.rs  transfer_native_eth.rs  transfer_native_from_agent.rs  transfer_polkadot_token.rs  transfer_polkadot_token_v2.rs  transfer_token.rs  update_fees.rs  upgrade_gateway.rs  (+3 more)
sp1-beefy-client/program/: Cargo.toml  build.rs
sp1-beefy-client/script/: Cargo.toml
(+2386 files in other folders)
