[workspace]
resolver = "2"
members = [
    "runtimes/asset-hub-westend-local",
    "runtimes/bridge-hub-westend-local",
    "runtimes/westend-local",
    "runtimes/asset-hub-westend",
    "runtimes/bridge-hub-westend",
    "runtimes/westend",
    "runtimes/asset-hub-paseo",
    "runtimes/bridge-hub-paseo",
    "runtimes/paseo",
]

[package]
name = "snowbridge-gas-estimator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snowbridge-gas-estimator"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.31"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"

# Ethereum interaction
alloy = { version = "1.0.9", features = ["full"] }
alloy-sol-types = "1.0.9"
hex = "0.4.3"
hex-literal = "0.4.1"

# Substrate/Polkadot interaction
subxt = { version = "0.42.1" }
subxt-signer = { version = "0.42.1" }
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["bit-vec", "derive", "full"] }
scale-info = { features = ["derive"], version = "2.11.6", default-features = false }

# Substrate primitives
sp-core = { version = "36.1.0" }
sp-crypto-hashing = { version = "0.1.0" }
sp-runtime = { version = "41.1.0" }

# XCM - simplified to avoid version conflicts for now
xcm = { version = "17.0.0", package = "staging-xcm" }
xcm-builder = { version = "21.0.0", package = "staging-xcm-builder" }
xcm-executor = { version = "20.0.0", package = "staging-xcm-executor" }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Utilities
lazy_static = "1.4.0"

# Runtime bindings - Local
asset-hub-westend-local-runtime = { path = "runtimes/asset-hub-westend-local", optional = true }
bridge-hub-westend-local-runtime = { path = "runtimes/bridge-hub-westend-local", optional = true }
westend-local-runtime = { path = "runtimes/westend-local", optional = true }

# Runtime bindings - Westend
asset-hub-westend-runtime = { path = "runtimes/asset-hub-westend", optional = true }
bridge-hub-westend-runtime = { path = "runtimes/bridge-hub-westend", optional = true }
westend-runtime = { path = "runtimes/westend", optional = true }

# Runtime bindings - Paseo
asset-hub-paseo-runtime = { path = "runtimes/asset-hub-paseo", optional = true }
bridge-hub-paseo-runtime = { path = "runtimes/bridge-hub-paseo", optional = true }
paseo-runtime = { path = "runtimes/paseo", optional = true }

snowbridge-pallet-ethereum-client-fixtures = { version = "0.22.0" }

[features]
default = []

local = [
    "asset-hub-westend-local-runtime",
    "bridge-hub-westend-local-runtime",
    "westend-local-runtime",
]
westend = [
    "asset-hub-westend-runtime",
    "bridge-hub-westend-runtime",
    "westend-runtime",
]
paseo = [
    "asset-hub-paseo-runtime",
    "bridge-hub-paseo-runtime",
    "paseo-runtime",
]
