[workspace]
members = [
    "primitives/core",
    "primitives/ethereum",
    "primitives/testutils",
    "primitives/router",
    "pallets/inbound-queue",
    "pallets/outbound-queue",
    "pallets/outbound-queue/rpc",
    "pallets/outbound-queue/merkle-proof",
    "pallets/ethereum-beacon-client",
    "pallets/control",
    "tools/call-index"
]
