[workspace]
members = [
    "primitives/core",
    "primitives/ethereum",
    "primitives/testutils",
    "primitives/router",
    "pallets/inbound-queue",
    "pallets/outbound-queue",
    "pallets/outbound-queue/runtime-api",
    "pallets/outbound-queue/merkle-tree",
    "pallets/ethereum-beacon-client",
    "pallets/control",
    "tools/call-index"
]
