[workspace]
resolver = "2"
members = [
    "primitives/core",
    "primitives/ethereum",
    "primitives/router",
    "pallets/inbound-queue",
    "pallets/outbound-queue",
    "pallets/outbound-queue/runtime-api",
    "pallets/outbound-queue/merkle-tree",
    "pallets/ethereum-beacon-client",
    "pallets/control",
    "pallets/control/runtime-api",
    "tools/call-index"
]
