[package]
name = "snowbridge-preimage-kusama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [
    "derive",
] }
hex-literal = { version = "0.4.1" }

clap = { version = "4.5.1", features = ["derive"] }

hex = "0.4.3"
subxt = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
sp-arithmetic = "24.0.0"
alloy-primitives = "0.6.3"
snowbridge-beacon-primitives = "0.2.0"
snowbridge-router-primitives = "0.2.0"
xcm-builder = { version = "2.0.1", package = "staging-xcm-builder" }

kusama-runtime = { path = "../runtimes/kusama" }
bridge-hub-kusama-runtime = { path = "../runtimes/bridge-hub-kusama" }
asset-hub-kusama-runtime = { path = "../runtimes/asset-hub-kusama" }

polkadot-runtime-constants = "3.0.0"

serde_json = "1.0.114"
sp-crypto-hashing = "0.1.0"
handlebars = "5.1.2"

[features]
default = []
