[package]
name = 'common'
version = '0.1.1'
authors = ['Snowfork <contact@snowfork.com>']
edition = '2018'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[features]
default = ['std']
std = [
    'frame-support/std',
]
