[package]
name = "artemis-node"
description = "Artemis Node"
version = "0.1.1"
build = "build.rs"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = "0.3.8"
tracing = "0.1.22"
parking_lot = "0.10.0"

# Cumulus dependencies
cumulus-consensus = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-collator = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-network = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-service = { git = "https://github.com/paritytech/cumulus", branch = "master" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", rev = "c59408004db39c25f078e3e1961e640159b1bdda" }
polkadot-service = { git = "https://github.com/paritytech/polkadot",rev = "c59408004db39c25f078e3e1961e640159b1bdda" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", rev = "c59408004db39c25f078e3e1961e640159b1bdda" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", rev = "c59408004db39c25f078e3e1961e640159b1bdda" }

[dependencies.artemis-runtime]
path = "../runtime"

[dependencies.pallet-transaction-payment-rpc]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-cli]
features = ["wasmtime"]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-client-api]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-chain-spec]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-tracing]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-consensus]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-consensus-aura]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-finality-grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-rpc]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-rpc-api]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-block-builder]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-blockchain]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-consensus-aura]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-finality-grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-timestamp]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-trie]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.substrate-frame-rpc-system]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.frame-benchmarking]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.frame-benchmarking-cli]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[build-dependencies.substrate-build-script-utils]
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[features]
default = []
