[package]
name = "artemis-node"
description = "Artemis Node"
version = "0.1.1"
build = "build.rs"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = "0.3.8"
tracing = "0.1.22"
parking_lot = "0.10.0"

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-benchmarking-cli= { git = "https://github.com/paritytech/substrate.git", branch = "master" }

cumulus-consensus = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-network = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-service = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }

artemis-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
