[package]
name = "artemis-node"
description = "Artemis Node"
version = "0.1.1"
build = "build.rs"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = "0.3.8"
tracing = "0.1.22"
parking_lot = "0.10.0"

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-benchmarking-cli= { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }

cumulus-consensus = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-network = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-service = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }

artemis-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
